-Refactoring code -Fix code magnets -Add new magnets with ranges